# Open-MedTok

./: README.md  infer.py  pyproject.toml  requirements.txt  train.py
benchmarks/: evaluate_ehrshot.py  evaluate_medqa.py  evaluate_mimic3.py  evaluate_mimic4.py
configs/: default_config.json
data/: __init__.py  dataloader.py  dataset.py
data/preprocessing/: __init__.py  graph_processor.py  text_processor.py
docs/: architectural_design.md  integration_guide.md  training_pipeline.md
examples/: ehr_integration_example.py  tokenize_example.py
examples/visualizations/: token_visualizer.py
integrations/: behrt_integration.py  ethos_integration.py  gt_behrt_integration.py  mult_ehr_integration.py  transformehr_integration.py
model/: __init__.py  graph_encoder.py  medtok.py  text_encoder.py  token_packer.py  vector_quantizer.py
scripts/: download_medical_codes.py  download_mimic.py  download_primekg.py  preprocess_pipeline.py  process_medical_codes.py  tokenize_code.py
tests/: conftest.py  pytest.ini  test_medtok.py
tests/integration/: test_full_pipeline.py
utils/: __init__.py  config.py  metrics.py
